# play-with-dagger-2

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  maven.bzl  version.bzl
src/main/java/com/trl/play_with_dagger_2/: Main.java
src/main/java/com/trl/play_with_dagger_2/a1/: Car.java  CarComponent.java  Engine.java  Main.java  Wheels.java
src/main/java/com/trl/play_with_dagger_2/without_dagger/: Car.java  Engine.java  Main.java  Wheels.java
src/test/java/com/trl/play_with_dagger_2/: Test.java
